cabal-version:  2.2
build-type:     Simple

name:           eun
version:        0.1.0.0
--description:    Please see the README on GitHub at <https://github.com/githubuser/wag2020#readme>
--homepage:       https://github.com/githubuser/wag2020#readme
--bug-reports:    https://github.com/githubuser/wag2020/issues
--author:         Ward Wheeler
--maintainer:     wheeler@amnh.org
--copyright:      2020 Ward Wheeler
--license:        BSD3
--license-file:   LICENSE

-- for static linking add options -static -optl-static -optl-pthread

executable euncon

  main-is: eun.hs

  ghc-options:  -Wall
                -Wincomplete-patterns
                -threaded 
                -O2
                -- for weeder
                -fwrite-ide-info 
                    -optl-static -optl-pthread
                -static
                -fllvm

-- delete these for OSX
  cc-options: -static
  ld-options: -static -pthread

  build-depends:  base >=4.10
                , containers >=0.6
                , graphviz
                , fgl
                , text
                , parallel
                , deepseq
                , vector
                , bv
                , array
                , split
                
                
  default-extensions : BangPatterns                

  default-language: Haskell2010

  other-modules:  Adams
                  GraphFormatUtilities
                  GeneralUtilities
                  ParallelUtilities
                  ParseCommands



 